@@ -16,6 +16,7 @@
     </entity>
     <entity id="e5" name="select" label="Select field" type="string">
       <help>This is my helptext</help>
+      <renderer type="dropdown"/>
       <options>
         <option value="1">Option 1</option>
         <option value="2">Option 2</option>
